Remove signature nullable annotation at function impl iface
All functions are now converted to the signature based registry and
thus must provide a signature.